--- a/duty/templates/duty/home.html
+++ b/duty/templates/duty/home.html
@@ -4,7 +4,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to the drivers head count page </h1>
-    <p>This is the home page.</p>
+    <h1>Welcome to Staff Transport</h1>
+    <a href="{% url 'enter_head_count' %}">Enter Head Count Details</a>
 </body>
 </html>
