--- a/duty/templates/duty/success.html
+++ b/duty/templates/duty/success.html
@@ -4,7 +4,8 @@
     <title>Success</title>
 </head>
 <body>
-    <h1>Data Submitted Successfully!</h1>
+    <h1>Success!</h1>
+    <p>Your data has been submitted successfully.</p>
+    <a href="{% url 'enter_head_count' %}">Enter more details</a>
 </body>
 </html>
-    
